# SO

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  cabezeras.h  headers.h  headers.h.gch  list_test.c  lista.c  lista.h  lista.h.gch  main.c  p0.c  p0.h  p0.h.gch  p1.c  p1.h  p1.h.gch  p2.c  p2.h  p3.c  p3.h  shell  test  testdas
P0/: lista.c  lista.h
P2/: Makefile  headers.h  lista.c  lista.h  main.c  p0.h  p2  p2.c
